--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "dev:debug": "nodemon -- inspect src/server.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "sequelize": "^5.21.2"
   },
   "devDependencies": {
     "eslint": "^6.7.0",
     "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-prettier": "^3.1.1",
     "nodemon": "^2.0.1",
+    "prettier": "^1.19.1",
     "sucrase": "^3.10.1"
   }
 }
