--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-prettier": "^3.1.1",
     "nodemon": "^2.0.1",
     "prettier": "^1.19.1",
+    "sequelize-cli": "^5.5.1",
     "sucrase": "^3.10.1"
   }
 }
